# Platformer

./: CMakeLists.txt  README.md
src/: Dynamic.cpp  Dynamic.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  main.cpp
